// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderChartConfig Query Events simple select + group by query logs 1`] = `
Array [
  Object {
    "ServiceName": "app",
    "count": "1",
  },
  Object {
    "ServiceName": "api",
    "count": "1",
  },
]
`;

exports[`renderChartConfig Query Events simple select + where query logs 1`] = `
Array [
  Object {
    "Body": "Oh no! Something went wrong!",
  },
]
`;

exports[`renderChartConfig Query Metrics handles counter resets correctly for sum metrics 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 15,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:10:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 52,
  },
]
`;

exports[`renderChartConfig Query Metrics single avg gauge 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "avg(toFloat64OrNull(toString(LastValue)))": 5.125,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "avg(toFloat64OrNull(toString(LastValue)))": 42,
  },
]
`;

exports[`renderChartConfig Query Metrics single avg gauge with group-by 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "arrayElement(ResourceAttributes, 'host')": "host2",
    "avg(toFloat64OrNull(toString(LastValue)))": 4,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "arrayElement(ResourceAttributes, 'host')": "host1",
    "avg(toFloat64OrNull(toString(LastValue)))": 6.25,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "arrayElement(ResourceAttributes, 'host')": "host2",
    "avg(toFloat64OrNull(toString(LastValue)))": 4,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "arrayElement(ResourceAttributes, 'host')": "host1",
    "avg(toFloat64OrNull(toString(LastValue)))": 80,
  },
]
`;

exports[`renderChartConfig Query Metrics single sum gauge 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "sum(toFloat64OrNull(toString(LastValue)))": 10.25,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "sum(toFloat64OrNull(toString(LastValue)))": 84,
  },
]
`;

exports[`renderChartConfig Query Metrics single sum rate 1`] = `
Array [
  Object {
    "__hdx_time_bucket": "2022-01-05T00:00:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 19,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:05:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 79,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:10:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 5813,
  },
  Object {
    "__hdx_time_bucket": "2022-01-05T00:15:00Z",
    "sum(toFloat64OrNull(toString(Rate)))": 78754,
  },
]
`;
